--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,11 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+
+/config/**
+!/config/**/
+!/config/**/.gitkeep
+
+/sample-sounds/**
+!/sample-sounds/**/
+!/sample-sounds/**/.gitkeep
